# wanwushengcheng1.0

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  start.bat
src/: CLAUDE.md  Cargo.toml  Dai_006docscreature-design01-dcwn-architecture.html  Dai_006docscreature-design02-semantic-resonance.html  Dai_006docscreature-design03-cognitive-market.html  Dai_006docscreature-designreasoning-core-innovation.html  lib.rs  start.sh
src/communication/: mod.rs  signal.rs
src/config/: cognis.rs  concept.rs  language.rs  lnn_core.rs  mod.rs  tokenizer.rs
src/core/: lnn.rs  neuron.rs  synapse.rs  types.rs
src/creature/: creature.rs
src/economy/: config.rs  currency.rs  generation_reward.rs  market.rs  mod.rs  pricing.rs  reward.rs  survival.rs
src/embedding/: features.rs  training.rs
src/genetic/: mod.rs
src/herness-web/: Dai_006docsworld-designinnovative-architecture-design.md  Dai_006docsworld-designsecurity-mechanisms.md  debug-test.js  nav-screenshot-test.js  screenshot-test.js
src/herness_web/: currency_ws.rs  generate_ws.rs  generate_ws_herness.rs  http.rs  learner.rs  mod.rs  parser.rs  protocol.rs  training_manager.rs  training_router.rs  training_ws.rs  training_ws_herness.rs  world_channel.rs  ws.rs
src/language/: mod.rs
src/learning/: recursive.rs  rules.rs
src/reasoning/: core.rs  drift.rs  drift_detector.rs  hierarchy.rs  mod.rs  protocol.rs  sru.rs  validation.rs  神经网络学习.md
src/safety/: monitor.rs
src/scripts/: download_embeddings.py
src/src/: lib.rs
src/tests/: reasoning_html_test.rs  recursive_learning_test.rs  safety_boundary.rs
(+281 files in other folders)
