[package]
name = "lnn"
version = "0.1.0"
edition = "2021"
description = "Liquid Neural Network implementation for 蛊虫智能系统"
authors = ["Genius Council"]

[dependencies]
# 时间
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# 日志
log = "0.4"
env_logger = "0.11"

# 并发
rayon = "1.10"

# 随机数
rand = "0.8"
toml = "1.1.2"

# Web服务 (for herness_web)
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures = "0.3"

# TUI (for hermes terminal)
ratatui = "0.27"
crossterm = "0.27"
parquet = { version = "58.3.0", features = ["arrow"] }

[dev-dependencies]
# 测试
proptest = "1.4"
regex = "1.10"

[[bin]]
name = "herness"
path = "src/bin/herness.rs"

# [[bin]]
# name = "hermes"
# path = "src/bin/hermes.rs"

[profile.release]
opt-level = 3
lto = true
