[package]
name = "lnn"
version = "0.1.0"
edition = "2021"
description = "Liquid Neural Network implementation for 蛊虫智能系统"
authors = ["Genius Council"]

[dependencies]
# 时间
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
log = "0.4"
env_logger = "0.11"

# 并发
rayon = "1.10"

# 随机数
rand = "0.8"
toml = "1.1.2"

[dev-dependencies]
# 测试
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
